--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/home.css">
 </head>
 <body>
+<h1> Kim's Convenience POV Simulator </h1>
 <a href="/ins_choi/">
 <p class="ins"> Ins Choi </p>
 <p class="ins_sub"> (Show Creator) </p>
