--- a/templates/ins_choi/ins_choi.html
+++ b/templates/ins_choi/ins_choi.html
@@ -4,8 +4,9 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/ins.css">
 </head>
 <body>
-<h1> You are Ins Choi. You must do one of two things. </h1>
-<div class="lbox"><a href="/ins_choi2/"> CHOICE 1 </a></div>
-<div class="rbox"><a href="/ins_choi_no/"> CHOICE 2 </a></div>
+<h1> You are Ins Choi, a Korean-Canadian and the original playwright of Kim's Convenience. 
+You are tasked with bringing the show to television alongside Kevin White, a fellow producer, do you accept? </h1>
+<div class="lbox"><div class="text"><a href="/ins_choi2/"> YES. </a></div></div>
+<div class="rbox"><div class="text"><a href="/ins_choi_no/"> NO. </a></div></div>
 </body>
 </html>
