--- a/templates/ins_choi/ins_choi2.html
+++ b/templates/ins_choi/ins_choi2.html
@@ -4,8 +4,9 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/ins.css">
 </head>
 <body>
-<h1> INSERT TEXT </h1>
-<div class="lbox"><a href="/ins_choi3/"> CHOICE 1 </a></div>
-<div class="rbox"><a href="/ins_choi_no2/"> CHOICE 2 </a></div>
+<h1> Excellent! The writing team is incorporating Korean foods into the scripts but Jean tells you of glaring errors and claims there isn't enough Korean cultural knowledge amongst the current writers.
+She wants to contribute to ensure the show stays authentic and realistic. Do you... </h1>
+<div class="lbox"><div class="text"><a href="/ins_choi3/"> Do nothing. </a></div></div>
+<div class="rbox"><div class="text"><a href="/ins_choi_no2/"> Speak up and encourage her to share more insights. </a></div></div>
 </body>
 </html>
