--- a/templates/ins_choi/ins_choi3.html
+++ b/templates/ins_choi/ins_choi3.html
@@ -4,8 +4,8 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/ins.css">
 </head>
 <body>
-<h1> INSERT TEXT </h1>
-<div class="lbox"><a href="/ins_choi4/"> CHOICE 1 </a></div>
-<div class="rbox"><a href="/ins_choi_no3/"> CHOICE 2 </a></div>
+<h1> Now Simu is chiming in, saying you did not create a pipeline of "diverse talent". He is upset because you did not do your best to represent them. What will you do? </h1>
+<div class="lbox"><div class="text"><a href="/ins_choi4/"> Do nothing. </a></div></div>
+<div class="rbox"><div class="text"><a href="/ins_choi_no3/"> Maybe it's time to take a stand! </a></div></div>
 </body>
 </html>
