--- a/templates/ins_choi/ins_choi4.html
+++ b/templates/ins_choi/ins_choi4.html
@@ -4,8 +4,10 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/ins.css">
 </head>
 <body>
-<h1> INSERT TEXT </h1>
-<div class="lbox"><a href="/ins_choi5/"> CHOICE 1 </a></div>
-<div class="rbox"><a href="/ins_choi_no4/"> CHOICE 2 </a></div>
+<h1> Paul has joined in and is begging you to speak up as the sole Korean and Asian person in the writers' room to please keep the storylines authentic instead of stereotypical and oblivious. 
+Not to mention he has stuck by you since the very first days of Kim's, which is a story you've based upon your own life and experiences of real immigrant struggles. 
+It's obviously a very important project to you, but as the seasons continue airing you seem to have lost direction. What will you do? </h1>
+<div class="lbox"><div class="text"><a href="/ins_choi5/"> Ignore him.  </a></div></div>
+<div class="rbox"><div class="text"><a href="/ins_choi_no4/"> Listen? </a></div></div>
 </body>
 </html>
