--- a/templates/ins_choi/ins_choi5.html
+++ b/templates/ins_choi/ins_choi5.html
@@ -4,8 +4,9 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/ins.css">
 </head>
 <body>
-<h1> INSERT TEXT </h1>
-<div class="lbox"><a href="/ins_choi_end/"> CHOICE 1 </a></div>
-<div class="rbox"><a href="/ins_choi_no5/"> CHOICE 2 </a></div>
+<h1> Well, you somehow regained control of the show's final season and have put your head down to focus on writing the final episodes instead of replying to any requests for comment.
+Evidently, you seem to have lost passion in the project in some way or form and have already planned to exit despite being greenlit for a 6th season. What will be the fate of Kim's Convenience? </h1>
+<div class="lbox"><div class="text"><a href="/ins_choi_end/"> I don't know. </a></div></div>
+<div class="rbox"><div class="text"><a href="/ins_choi_no5/"> Find somebody who has the cultural background and knowhow, see if they can continue running the show. </a></div></div>
 </body>
 </html>
