--- a/templates/ins_choi/ins_choi_end.html
+++ b/templates/ins_choi/ins_choi_end.html
@@ -4,7 +4,15 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/end.css">
 </head>
 <body>
-<h1> Congratulations on reaching the end! Click the box below to go back to the home page and try one of the other paths if you haven't already! </h1>
-<div class="cbox"><a href="/"> HOME </a></div>
+<h1> Ultimately, Kim's Convenience could not continue without Ins or a worthy replacement, and eventually the cancellation occured. 
+While it may seem as though Ins is to blame, we must also remember that he was in the minority as well being in a primarily White environment. 
+Perhaps it was difficult for him to vocalize concerns as time went on while the majority preferred the comical approach to writing, rather than acknowledging the Korean immigrant roots upon which the premise Ins built.
+This would make sense as White writers likely knew little about the "out-group" of Asians who differed greatly in terms of culture and behaviour. 
+Ins may have felt obligated to conform to the dominant group, and adopted normative behaviours including ignoring the cast's pleas for access. 
+It may have been that the writers were afraid of the Asian cast, seeing them as a threat rather than an opportunity, and Ins internalized their feelings over the course of 6 years as he gradually lost control of the show. 
+While we may never know for sure, it is still a shame the show ended prematurely.
+ 
+If you also feel as though the ending was unsatisfactory, please consider signing <a href="https://www.change.org/p/keep-kim-s-convenience-going-save-kim-s-convenience-today"> this petition </a> to give Kim's Convenience the ending it truly deserves. </h1>
+<div class="cbox"><div class="text"><a href="/"> Click here to go back to the home page and try one of the other paths! </a></div></div>
 </body>
 </html>
