--- a/templates/ins_choi/ins_choi_no4.html
+++ b/templates/ins_choi/ins_choi_no4.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/wrong.css">
 </head>
 <body>
-<h1> That would make sense, wouldn't it? But that isn't what happened. </h1>
-<div class="box"><a href="/ins_choi4/"> Try again </a></div>
+<h1> That would make sense, wouldn't it? But isn't what happened. Ins essentially stopped talking to Paul and left the Asian cast in the dark. </h1>
+<div class="box"><a href="/ins_choi4/"> Back To Previous </a></div>
 </body>
 </html>
