--- a/templates/jean/jean.html
+++ b/templates/jean/jean.html
@@ -4,8 +4,10 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/jean.css">
 </head>
 <body>
-<h1> You are Jean Yoon. You must do one of two things. </h1>
-<div class="lbox"><a href="/jean2/"> CHOICE 1 </a></div>
-<div class="rbox"><a href="/jean_no/"> CHOICE 2 </a></div>
+<h1> You are Jean Yoon, an Asian-Canadian actress with playwright experience. 
+You've been offered the opportunity to continue to play the matriarch on a television screen following the play productions. 
+Do you accept? </h1>
+<div class="lbox"><div class="text"><a href="/jean2/"> YES. </a></div></div>
+<div class="rbox"><div class="text"><a href="/jean_no/"> NO. </a></div></div>
 </body>
 </html>
