--- a/templates/jean/jean2.html
+++ b/templates/jean/jean2.html
@@ -4,8 +4,10 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/jean.css">
 </head>
 <body>
-<h1> INSERT TEXT </h1>
-<div class="lbox"><a href="/jean3/"> CHOICE 1 </a></div>
-<div class="rbox"><a href="/jean_no2/"> CHOICE 2 </a></div>
+<h1> Awesome! It's been an amazing experience to be part of a unique team with a specific cultural vision and original storytelling direction. 
+Just one problem, they want Umma to make spoiled kimchi, which would be very unlikely to occur, as it's a fermented dish with antibacterial properties.
+Do you try your best to give input or give in to the writers' wishes? </h1>
+<div class="lbox"><div class="text"><a href="/jean3/"> Suggest a meat dish like galbijjim instead that is more realistic. </a></div></div>
+<div class="rbox"><div class="text"><a href="/jean_no2/"> Stick to the script, they would know best! </a></div></div>
 </body>
 </html>
