--- a/templates/jean/jean3.html
+++ b/templates/jean/jean3.html
@@ -4,8 +4,9 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/jean.css">
 </head>
 <body>
-<h1> INSERT TEXT </h1>
-<div class="lbox"><a href="/jean4/"> CHOICE 1 </a></div>
-<div class="rbox"><a href="/jean_no3/"> CHOICE 2 </a></div>
+<h1> Whew! Good thing something was said, because it was not the first cultural inaccuracy the writing team tried to overlook, and it certainly wasn't the last.
+Speaking of that, the writing team refuses to meet with you even though you and your castmates have been asking to contribute since the first season! But maybe you can offer a solution still. </h1>
+<div class="lbox"><div class="text"><a href="/jean4/"> Push for a Korean female writer. </a></div></div>
+<div class="rbox"><div class="text"><a href="/jean_no3/"> There's nothing left to do. </a></div></div>
 </body>
 </html>
