--- a/templates/jean/jean4.html
+++ b/templates/jean/jean4.html
@@ -4,8 +4,9 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/jean.css">
 </head>
 <body>
-<h1> INSERT TEXT </h1>
-<div class="lbox"><a href="/jean5/"> CHOICE 1 </a></div>
-<div class="rbox"><a href="/jean_no4/"> CHOICE 2 </a></div>
+<h1> Nice job sharing your sentiments and wanting to maintain the authenticity of the show. Unfortunately, the producers do not want to engage with you nor the rest of the Asian cast's ideas or opinions. 
+In fact, you only receive your script 1.5 weeks before shooting so nevermind the asks to write or direct any episodes. Now they are hoping to diagnose Umma with multiple sclerosis, what will you do? </h1>
+<div class="lbox"><div class="text"><a href="/jean5/"> Consider the cultural implications and see if there is anything that can be done. </a></div></div>
+<div class="rbox"><div class="text"><a href="/jean_no4/"> It's not really an issue for you anymore either way. </a></div></div>
 </body>
 </html>
