--- a/templates/jean/jean5.html
+++ b/templates/jean/jean5.html
@@ -4,8 +4,9 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/jean.css">
 </head>
 <body>
-<h1> INSERT TEXT </h1>
-<div class="lbox"><a href="/jean_end/"> CHOICE 1 </a></div>
-<div class="rbox"><a href="/jean_no5/"> CHOICE 2 </a></div>
+<h1> Sadly, Umma was not given the freedom to hide her diagnosis the way she wanted to and was instead handled in a rather comical fashion, to the utter dismay of both you and fans.
+Finally, the endless interracial upset and turmoil has led to an abrupt, yet bitter-sweet cancellation. Any final reflections? </h1>
+<div class="lbox"><div class="text"><a href="/jean_end/"> Yup, it has been a painful experience. </a></div></div>
+<div class="rbox"><div class="text"><a href="/jean_no5/"> I'm just glad to be done, it's all water under the bridge now. </a></div></div>
 </body>
 </html>
