--- a/templates/jean/jean_end.html
+++ b/templates/jean/jean_end.html
@@ -4,7 +4,14 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/end.css">
 </head>
 <body>
-<h1> Congratulations on reaching the end! Click the box below to go back to the home page and try one of the other paths if you haven't already! </h1>
-<div class="cbox"><a href="/"> HOME </a></div>
+<h1> In Jean's words; "I feel personally sad at the missed opportunites to share with our audiences what anti-Asian racism looks and feels like... 
+you cannot do a show about a minority experience, have it run by a white person and expect it to be OK... a lack of respect for a culture manifest as sytematic racism". 
+
+
+Congratulations on reaching the end and we hope you've learned something regarding interracial conflict and its potential detriments in Canada. 
+If you also feel as though the ending was unsatisfactory, please consider signing 
+<a href="https://www.change.org/p/keep-kim-s-convenience-going-save-kim-s-convenience-today"> this petition </a> to give Kim's Convenience the ending it truly deserves. </h1>
+<div class="cbox"><div class="text"><a href="/"> 
+Click here to go back to the home page and try one of the other paths!  </a></div></div>
 </body>
 </html>
