--- a/templates/jean/jean_no.html
+++ b/templates/jean/jean_no.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/wrong.css">
 </head>
 <body>
-<h1> That would make sense, wouldn't it? But that isn't what happened. </h1>
-<div class="box"><a href="/jean/"> Try again </a></div>
+<h1> Without Jean there is no story! </h1>
+<div class="box"><a href="/jean/"> Back To Previous </a></div>
 </body>
 </html>
