--- a/templates/jean/jean_no4.html
+++ b/templates/jean/jean_no4.html
@@ -4,7 +4,10 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/wrong.css">
 </head>
 <body>
-<h1> That would make sense, wouldn't it? But that isn't what happened. </h1>
-<div class="box"><a href="/jean4/"> Try again </a></div>
+<h1> Turns out multiple sclerosis is very rarely occuring amongst Korean people, so the television script could be considered misleading. 
+This could develop into a stigma and consequently a behavioural immune system response whereby the fear, even if irrational, of contracting diseases from Koreans
+would cause others to see them as sickly and best to avoid.
+Such negative implications surely would upset Jean!  </h1>
+<div class="box"><a href="/jean4/"> Back To Previous </a></div>
 </body>
 </html>
