--- a/templates/kevin/kevin.html
+++ b/templates/kevin/kevin.html
@@ -4,8 +4,8 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/kevin.css">
 </head>
 <body>
-<h1>You are Kevin White. You must do one of two things.</h1>
-<div class="lbox"><a href="/kevin2/"> CHOICE 1 </a></div>
-<div class="rbox"><a href="/kevin_no/"> CHOICE 2 </a></div>
+<h1>You are Kevin White, co-creator and showrunner of Kim's Convenience. Your goal is to tell the authentic, story of an immigrant family in Toront. What do you do? </h1>
+<div class="lbox"><div class="text"><a href="/kevin2/"> Try to incorporate concepts you're familiar with, even if it means compromising on the integrity of the premise. </a></div></div>
+<div class="rbox"><div class="text"><a href="/kevin_no/"> Focus on telling a geniune story, and accept help in unfamiliar domains.  </a></div></div>
 </body>
 </html>
