--- a/templates/kevin/kevin2.html
+++ b/templates/kevin/kevin2.html
@@ -4,8 +4,9 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/kevin.css">
 </head>
 <body>
-<h1> INSERT TEXT </h1>
-<div class="lbox"><a href="/kevin3/"> CHOICE 1 </a></div>
-<div class="rbox"><a href="/kevin_no2/"> CHOICE 2 </a></div>
+<h1> As time goes on, Asian cast members continue to contend you on the inaccuracies and racist storylines presented in later and later seasons of the show. 
+You, on the other hand, have continued to gain greater and greater control of the showrunning, and would probably be responsible for the overarching direction of tone. </h1>
+<div class="lbox"><div class="text"><a href="/kevin3/"> Ratings continue to be good, so there probably isn't anything needing change.  </a></div></div>
+<div class="rbox"><div class="text"><a href="/kevin_no2/"> Maybe it's time to reconsider how plausible it will be for a largely non-Asian group of writers to tell this story. </a></div></div>
 </body>
 </html>
