--- a/templates/kevin/kevin3.html
+++ b/templates/kevin/kevin3.html
@@ -4,8 +4,9 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/kevin.css">
 </head>
 <body>
-<h1> INSERT TEXT </h1>
-<div class="lbox"><a href="/kevin4/"> CHOICE 1 </a></div>
-<div class="rbox"><a href="/kevin_no3/"> CHOICE 2 </a></div>
+<h1> Ins, the original playwright has clearly lost his passion, and you weren't really invested in the story anymore yourself really. 
+You have another project lined up actually, it's going to be a spin-off of Kim's and will feature the only White cast member getting her own show. </h1>
+<div class="lbox"><div class="text"><a href="/kevin_end/"> That makes sense I guess. </a></div></div>
+<div class="rbox"><div class="text"><a href="/kevin_no3/"> What? Seriously? </a></div></div>
 </body>
 </html>
