--- a/templates/kevin/kevin_end.html
+++ b/templates/kevin/kevin_end.html
@@ -4,7 +4,11 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/end.css">
 </head>
 <body>
-<h1> Congratulations on reaching the end! Click the box below to go back to the home page and try one of the other paths if you haven't already! </h1>
-<div class="cbox"><a href="/"> HOME </a></div>
+<h1> The Asian cast continue to express disappointment, hurt, and sadness over the loss of opportunity to highlight more Asian talent in the Canadian media scope. It's time for you to move on though. 
+Congratulations on reaching the end of Kevin's POV and we hope you've learned something regarding interracial and hierarchy based conflicts, and its potential detriments. 
+
+If you also feel as though the ending was unsatisfactory please consider signing <a href="https://www.change.org/p/keep-kim-s-convenience-going-save-kim-s-convenience-today"> this petition </a> to give Kim's Convenience the ending it truly deserves.
+</h1>
+<div class="cbox"><div class="text"><a href="/"> Click here to go back to the home page and try one of the other paths! </a></div></div>
 </body>
 </html>
