--- a/templates/kevin/kevin_no2.html
+++ b/templates/kevin/kevin_no2.html
@@ -4,7 +4,9 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/wrong.css">
 </head>
 <body>
-<h1> That would make sense, wouldn't it? But that isn't what happened. </h1>
-<div class="box"><a href="/kevin2/"> Try again </a></div>
+<h1> That would make sense, wouldn't it? But isn't what happened. There continued to be a lack of diversity and refusal of cast intervention. 
+Perhaps Kevin felt danger from the Asian cast, he may have seen them to be goal impeders who could do better than he could. 
+And instead of collaborating, he felt the best self-protection mechanism would be to distance himself from "out-group" members who posed a threat to his career. </h1>
+<div class="box"><a href="/kevin2/"> Try Again </a></div>
 </body>
 </html>
