--- a/templates/paul/paul.html
+++ b/templates/paul/paul.html
@@ -4,8 +4,9 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/paul.css">
 </head>
 <body>
-<h1> You are Paul Sun-Hyung Lee. You must do one of two things. </h1>
-<div class="lbox"><a href="/paul2/"> CHOICE 1 </a></div>
-<div class="rbox"><a href="/paul_no/"> CHOICE 2 </a></div>
+<h1> You are Paul Sun-Hyung Lee, a Canadian actor who has been part of Kim's Convenience since the very beginning, even before its televised inception. 
+But you must decide if you want to play the character on television anyway. </h1>
+<div class="lbox"><div class="text"><a href="/paul2/"> YES. </a></div></div>
+<div class="rbox"><div class="text"><a href="/paul_no/"> NO. </a></div></div>
 </body>
 </html>
