--- a/templates/paul/paul2.html
+++ b/templates/paul/paul2.html
@@ -4,8 +4,9 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/paul.css">
 </head>
 <body>
-<h1> INSERT TEXT </h1>
-<div class="lbox"><a href="/paul3/"> CHOICE 1 </a></div>
-<div class="rbox"><a href="/paul_no2/"> CHOICE 2 </a></div>
+<h1> Good choice! You are known as the lead actor on set and have always loved the experience of playing Appa. Unfortunately the sudden news of cancellation came to you only 24 hours before the public knew.
+This came during the midst of another project you are on yet everybody wants to know what happened. What do you do? </h1>
+<div class="lbox"><div class="text"><a href="/paul3/"> Address the Kim's news now and keep the attention on Canada Reads, the other project. </a></div><div>
+<div class="rbox"><div class="text"><a href="/paul_no2/"> Hope it blows over and do nothing. </a></div></div>
 </body>
 </html>
