--- a/templates/paul/paul3.html
+++ b/templates/paul/paul3.html
@@ -4,8 +4,9 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/paul.css">
 </head>
 <body>
-<h1> INSERT TEXT </h1>
-<div class="lbox"><a href="/paul4/"> CHOICE 1 </a></div>
-<div class="rbox"><a href="/paul_no3/"> CHOICE 2 </a></div>
+<h1> Heartbroken and hurt but thankful to fans, you dive into the difficulties and sacrifices that had paved a path for a potential 6th season. 
+Unfortunately, the biggest roadblock had been in finding a new showrunner who could convey the integral Korean-Canadian culture. What now?  </h1>
+<div class="lbox"><div class="text"><a href="/paul4/"> Speak to Ins, he is the original playwright after all and would know best. </a></div></div>
+<div class="rbox"><div class="text"><a href="/paul_no3/"> There's no salvaging, that's the sad truth. </a></div></div>
 </body>
 </html>
