--- a/templates/paul/paul4.html
+++ b/templates/paul/paul4.html
@@ -4,8 +4,10 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/paul.css">
 </head>
 <body>
-<h1> INSERT TEXT </h1>
-<div class="lbox"><a href="/paul5/"> CHOICE 1 </a></div>
-<div class="rbox"><a href="/paul_no4/"> CHOICE 2 </a></div>
+<h1> Ins seems like the obvious choice for finding a sucessor, but he has ghosted you. 
+It's unfortunate but it seems like there was a lack of representation behind the scenes even though on the surface it did not appear so. 
+You realize there weren't young writers, people of colour, or somebody capable of holding the reigns at this time. How do you feel? </h1>
+<div class="lbox"><div class="text"><a href="/paul_end/"> Hopeful, maybe some takeaways are possible. </a></div></div>
+<div class="rbox"><div class="text"><a href="/paul_no4/"> Dejected, it's such an awful ending. </a></div></div>
 </body>
 </html>
