--- a/templates/paul/paul_end.html
+++ b/templates/paul/paul_end.html
@@ -4,7 +4,12 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/end.css">
 </head>
 <body>
-<h1> Congratulations on reaching the end! Click the box below to go back to the home page and try one of the other paths if you haven't already! </h1>
-<div class="cbox"><a href="/"> HOME </a></div>
+<h1> Even though the lack of communication and representation were problematic, you're still grateful for the chance to channel your own experiences growing up around "strong, stubborn Korean men"
+in a lightearted fashion that was still accurate and positive. 
+Though the show essentially "died from within", you believe the functional elements could certainly be implemented for a new show someday to display continued positive, 
+Asian values and skip the mistakes Kim's Convenience made in the process. 
+However, if you feel as though the ending was unsatisfactory please consider signing <a href="https://www.change.org/p/keep-kim-s-convenience-going-save-kim-s-convenience-today"> this petition </a> to give Kim's Convenience the ending it truly deserves.
+  </h1>
+<div class="cbox"><div class="text"><a href="/"> Click here to go back to the home page and try one of the other paths! </a></div></div>
 </body>
 </html>
