--- a/templates/paul/paul_no2.html
+++ b/templates/paul/paul_no2.html
@@ -4,7 +4,8 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/wrong.css">
 </head>
 <body>
-<h1> That would make sense, wouldn't it? But that isn't what happened. </h1>
-<div class="box"><a href="/paul2/"> Try again </a></div>
+<h1> Paul would surely have something to say about the matter wouldn't he? 
+Kim's was part of his life for 16 years after all, and he loves the experience and what possibilities it has provided for the emerging demographic of Asian-Canadian talent! </h1>
+<div class="box"><a href="/paul2/"> Back To Previous </a></div>
 </body>
 </html>
