--- a/templates/paul/paul_no3.html
+++ b/templates/paul/paul_no3.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <h1> That would make sense, wouldn't it? But that isn't what happened. </h1>
-<div class="box"><a href="/paul3/"> Try again </a></div>
+<div class="box"><a href="/paul3/"> Back To Previous </a></div>
 </body>
 </html>
