--- a/templates/simu/simu.html
+++ b/templates/simu/simu.html
@@ -4,8 +4,9 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/simu.css">
 </head>
 <body>
-<h1><a>You are Simu Liu. You must do one of two things.</a></h1>
-<div class="lbox"><a href="/simu2/"> CHOICE 1 </a></div>
-<div class="rbox"><a href="/simu_no/"> CHOICE 2 </a></div>
+<h1><a>You are Simu Liu, the MCU's first Asian Superhero and you portray Jung the rebellious son on Kim's Convenience. 
+You have just found out the show has been cancelled and harbour personal resentments. Do you... </a></h1>
+<div class="lbox"><div class="text"><a href="/simu2/"> SHARE YOUR STORY </a></div></div>
+<div class="rbox"><div class="text"><a href="/simu_no/"> KEEP IT TO YOURSELF </a></div></div>
 </body>
 </html>
