--- a/templates/simu/simu2.html
+++ b/templates/simu/simu2.html
@@ -4,8 +4,10 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/simu.css">
 </head>
 <body>
-<h1> INSERT TEXT </h1>
-<div class="lbox"><a href="/simu3/"> CHOICE 1 </a></div>
-<div class="rbox"><a href="/simu_no2/"> CHOICE 2 </a></div>
+<h1> First thing's first. You want to address the wages being paid to you and your castmates, they are insultingly low and were locked in back when no one had any star power. 
+Fair enough at the time but now you realize they have taken advantage of the cast. 
+Not to mention, the cast were often told to be grateful of what they had, which made it difficult for everybody to come together as a united front. </h1>
+<div class="lbox"><div class="text"><a href="/simu3/"> Tell me more... </a></div></div>
+<div class="rbox"><div class="text"><a href="/simu_no2/"> No wait, this isn't important information. </a></div></div>
 </body>
 </html>
