--- a/templates/simu/simu3.html
+++ b/templates/simu/simu3.html
@@ -4,8 +4,10 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/simu.css">
 </head>
 <body>
-<h1> INSERT TEXT </h1>
-<div class="lbox"><a href="/simu4/"> CHOICE 1 </a></div>
-<div class="rbox"><a href="/simu_no3/"> CHOICE 2 </a></div>
+<h1> You also felt like a problem child at times, bringing personal frustrations such as being overlooked for awards to the set, and recognized part of the problem was in-fighting amonst the cast. 
+This would be an example of both coalition (cooperation) and derogation (competition) amongst minority members, and sadly contributed to the lack of unity against unjust events behind the scenes.
+Regardless, you wanted to be part of the 6th season as you felt it positively impacted immigrant families and brought people together.  </h1>
+<div class="lbox"><div class="text"><a href="/simu4/"> That's great, but how could he have done so with his busy Marvel schedule?  </a></div></div>
+<div class="rbox"><div class="text"><a href="/simu_no3/"> That's great, let's talk about the new season! </a></div></div>
 </body>
 </html>
