--- a/templates/simu/simu4.html
+++ b/templates/simu/simu4.html
@@ -4,8 +4,9 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/simu.css">
 </head>
 <body>
-<h1> INSERT TEXT </h1>
-<div class="lbox"><a href="/simu5/"> CHOICE 1 </a></div>
-<div class="rbox"><a href="/simu_no4/"> CHOICE 2 </a></div>
+<h1> Actually there wasn't an issue, you ensured you would be able to work around the schedules as you believed strongly in what the show once stood for; 
+the amazing creations that can come from opportunities given to minority groups in Canada. </h1>
+<div class="lbox"><div class="text"><a href="/simu5/"> So what happens next? </a></div></div>
+<div class="rbox"><div class="text"><a href="/simu_no4/"> Story still seems off. </a></div></div>
 </body>
 </html>
