--- a/templates/simu/simu5.html
+++ b/templates/simu/simu5.html
@@ -4,8 +4,10 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/simu.css">
 </head>
 <body>
-<h1> INSERT TEXT </h1>
-<div class="lbox"><a href="/simu_end/"> CHOICE 1 </a></div>
-<div class="rbox"><a href="/simu_no5/"> CHOICE 2 </a></div>
+<h1> Well, after the show was cancelled the only White cast member was given a spin-off and her character arguably receieved the only proper ending in the main series. 
+You were vocal on how the circumstances that devolved into this outcome were unfortunate, and seemed to go against much of what made Kim's Convenience great -- 
+ a show centred around a large Asian cast, a first in Canadia media! </h1>
+<div class="lbox"><div class="text"><a href="/simu_end/"> I'm very upset, but I wish the best for the spin-off. </a></div></div>
+<div class="rbox"><div class="text"><a href="/simu_no5/"> Boycott the spin-off! </a></div></div>
 </body>
 </html>
