--- a/templates/simu/simu_end.html
+++ b/templates/simu/simu_end.html
@@ -4,7 +4,12 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/end.css">
 </head>
 <body>
-<h1> Congratulations on reaching the end! Click the box below to go back to the home page and try one of the other paths if you haven't already! </h1>
-<div class="cbox"><a href="/"> HOME </a></div>
+<h1> Simu did not cast hate onto the spin-off, but rather remains resentful of how the events unfolded and led to such an outcome. 
+He had no ill will towards his former castmate and instead wished her the best. 
+A class act, and a positive representation of the Asian community, his sentiments were received well by castmates and fans alike.
+
+If you also feel as though the ending was unsatisfactory, please consider signing <a href="https://www.change.org/p/keep-kim-s-convenience-going-save-kim-s-convenience-today"> this petition </a> to give Kim's Convenience the ending it truly deserves.
+ </h1>
+<div class="cbox"><div class="text"><a href="/"> Congratulations on reaching the end! Click here to go back to the home page and try one of the other paths! </a></div></div>
 </body>
 </html>
