--- a/templates/simu/simu_no.html
+++ b/templates/simu/simu_no.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/wrong.css">
 </head>
 <body>
-<h1> That would make sense, wouldn't it? But that isn't what happened. </h1>
-<div class="box"><a href="/simu/"> Try again </a></div>
+<h1> Simu would definitely want to share his experiences and keep his fans in the loop right? </h1>
+<div class="box"><a href="/simu/"> Back To Previous </a></div>
 </body>
 </html>
