--- a/templates/simu/simu_no2.html
+++ b/templates/simu/simu_no2.html
@@ -4,7 +4,9 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/wrong.css">
 </head>
 <body>
-<p> That would make sense, wouldn't it? But that isn't what happened. </p>
-<div class="box"><a href="/simu2/"> Try again </a></div>
+<h1> Well, Asians are often known as the "model minority" and due to this very reason, they do not retaliate and remain complicit as per the teachings of Eastern culture. 
+Some spoke out against Simu actually, calling him entitled. Jean quickly spoke up in defense of her castmate and more details are in her story path. 
+Most of the Asian cast were in support of Simu's comments and shared similar feelings, and the majority of these injustices were hidden behind the cameras, unbeknownst to fans.  </h1>
+<div class="box"><a href="/simu2/"> Back To Previous </a></div>
 </body>
 </html>
