--- a/templates/simu/simu_no3.html
+++ b/templates/simu/simu_no3.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/wrong.css">
 </head>
 <body>
-<p> That would make sense, wouldn't it? But that isn't what happened. </p>
-<div class="box"><a href="/simu3/"> Try again </a></div>
+<h1> ERROR! There is no Kim's Convenience Season 6. It was cancelled, remember? </h1>
+<div class="box"><a href="/simu3/"> Back To Previous </a></div>
 </body>
 </html>
