--- a/templates/simu/simu_no4.html
+++ b/templates/simu/simu_no4.html
@@ -4,7 +4,9 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/wrong.css">
 </head>
 <body>
-<p> That would make sense, wouldn't it? But that isn't what happened. </p>
-<div class="box"><a href="/simu4/"> Try again </a></div>
+<h1> It's true! Simu was so incredibly upset over the entire situation he had taken to Facebook to write a (since deleted) post on how there were so many things wrong with where the show went over time.
+He had always wanted to write or provide his own perspective to his character, and was never really ready to say goodbye to Jung even though he had zero creative freedoms. 
+Perhaps the writers saw him as a threat rather than an opportunity, that is a goal impeder if you will. </h1>
+<div class="box"><a href="/simu4/"> Back To Previous </a></div>
 </body>
 </html>
