--- a/templates/ins_choi/ins_choi_no.html
+++ b/templates/ins_choi/ins_choi_no.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/wrong.css">
 </head>
 <body>
-<h1> That would make sense, wouldn't it? But that isn't what happened. </h1>
-<div class="box"><a href="/ins_choi/"> Try again </a></div>
+<h1> Without Ins there really will not be a story! </h1>
+<div class="box"><a href="/ins_choi/"> Back To Previous </a></div>
 </body>
 </html>
