--- a/templates/ins_choi/ins_choi_no2.html
+++ b/templates/ins_choi/ins_choi_no2.html
@@ -4,7 +4,8 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/wrong.css">
 </head>
 <body>
-<h1> That would make sense, wouldn't it? But that isn't what happened. </h1>
-<div class="box"><a href="/ins_choi2/"> Try again </a></div>
+<h1> That would make sense, wouldn't it? But it isn't what happened. 
+According to cast interviews, Ins did not do a good job of representing the Asian cast in a pre-dominantly White writers' room. </h1>
+<div class="box"><a href="/ins_choi2/"> Back To Previous </a></div>
 </body>
 </html>
