--- a/templates/ins_choi/ins_choi_no3.html
+++ b/templates/ins_choi/ins_choi_no3.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/wrong.css">
 </head>
 <body>
-<h1> That would make sense, wouldn't it? But that isn't what happened. </h1>
-<div class="box"><a href="/ins_choi3/"> Try again </a></div>
+<h1> That would make sense, wouldn't it? But isn't what happened. Ins did not comment on the matter and that's really all the information there is. </h1>
+<div class="box"><a href="/ins_choi3/"> Back To Previous </a></div>
 </body>
 </html>
