--- a/templates/ins_choi/ins_choi_no5.html
+++ b/templates/ins_choi/ins_choi_no5.html
@@ -4,7 +4,9 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/wrong.css">
 </head>
 <body>
-<h1> That would make sense, wouldn't it? But that isn't what happened. </h1>
-<div class="box"><a href="/ins_choi5/"> Try again </a></div>
+<h1> That would make sense, wouldn't it? But isn't what happened. 
+Even though various cast members had vocalized interest in directing and/or writing episodes, none of these requests were actually fulfilled.
+There is truly a veil of mystery surrounding Ins' later involvement and general cast relations, but some intergroup theories could help explain a possible reason. </h1>
+<div class="box"><a href="/ins_choi5/"> Back To Previous </a></div>
 </body>
 </html>
