--- a/templates/jean/jean_no2.html
+++ b/templates/jean/jean_no2.html
@@ -4,7 +4,8 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/wrong.css">
 </head>
 <body>
-<h1> That would make sense, wouldn't it? But that isn't what happened. </h1>
-<div class="box"><a href="/jean2/"> Try again </a></div>
+<h1> Maybe Jean should say something, because kimchi is integral to Korean culture and survival, so Umma would be shunned or depicted in a very bad manner.
+Jean doesn't want to spread negative stereotypes or stigmas about Asian-Canadians being careless! </h1>
+<div class="box"><a href="/jean2/"> Back To Previous </a></div>
 </body>
 </html>
