--- a/templates/jean/jean_no3.html
+++ b/templates/jean/jean_no3.html
@@ -4,7 +4,9 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/wrong.css">
 </head>
 <body>
-<h1> That would make sense, wouldn't it? But that isn't what happened. </h1>
-<div class="box"><a href="/jean3/"> Try again </a></div>
+<h1> Jean is a strong supporter of diversity and equality. Jean has always hoped the writing room would incorporate a greater number of Korean and Asian writers! 
+In fact, Jean was disappointed by the lack of Black, Indigenous, and other non-White groups' presence as well. 
+This led to a dominant group comprised of Whites and execution of what they specifically wanted to see happen as the show continued.  </h1>
+<div class="box"><a href="/jean3/"> Back To Previous </a></div>
 </body>
 </html>
