--- a/templates/jean/jean_no5.html
+++ b/templates/jean/jean_no5.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/wrong.css">
 </head>
 <body>
-<h1> That would make sense, wouldn't it? But that isn't what happened. </h1>
-<div class="box"><a href="/jean5/"> Try again </a></div>
+<h1> Are you sure that's what Jean would have wanted? </h1>
+<div class="box"><a href="/jean5/"> Back To Previous </a></div>
 </body>
 </html>
