--- a/templates/kevin/kevin_no.html
+++ b/templates/kevin/kevin_no.html
@@ -4,7 +4,8 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/wrong.css">
 </head>
 <body>
-<h1> That would make sense, wouldn't it? But that isn't what happened. </h1>
-<div class="box"><a href="/kevin/"> Try again </a></div>
+<h1> That would make sense, wouldn't it? But isn't what happened. Kevin would repeatedly reject help from the Asian cast. 
+This could be attributed to a fear of out-groups invading his in-group of predominantly White writers who lacked knowledge about Asian and especially Korean culture.  </h1>
+<div class="box"><a href="/kevin/"> Try Again </a></div>
 </body>
 </html>
