--- a/templates/kevin/kevin_no3.html
+++ b/templates/kevin/kevin_no3.html
@@ -4,7 +4,10 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/wrong.css">
 </head>
 <body>
-<h1> That would make sense, wouldn't it? But that isn't what happened. </h1>
-<div class="box"><a href="/kevin3/"> Try again </a></div>
+<h1> Yeah, the spin-off has its first season out already actually. 
+And for the record Kevin says it was the only character they could've done the spin-off for, every other character was technically not his intellectual property.
+But don't forget the fact that many cast members very much loved their roles, wanted to continue the show, and would be happy to heighten involvement too. Surely something more could've been pressed for?
+Sadly, this was not what happened at all, so please press below to see the rest of the real story. </h1>
+<div class="box"><a href="/kevin3/"> Try Again </a></div>
 </body>
 </html>
