--- a/templates/paul/paul_no4.html
+++ b/templates/paul/paul_no4.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/wrong.css">
 </head>
 <body>
-<h1> That would make sense, wouldn't it? But that isn't what happened. </h1>
-<div class="box"><a href="/paul4/"> Try again </a></div>
+<h1> Yes, Paul is incredibly hurt now both by the surprise cancellation and Ins ignoring him. But Paul still values the experience and has some takeaways to share. </h1>
+<div class="box"><a href="/paul4/"> Back To Previous </a></div>
 </body>
 </html>
