--- a/templates/simu/simu_no5.html
+++ b/templates/simu/simu_no5.html
@@ -4,7 +4,8 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/wrong.css">
 </head>
 <body>
-<p> That would make sense, wouldn't it? But that isn't what happened. </p>
-<div class="box"><a href="/simu5/"> Try again </a></div>
+<h1> Despite being treated unfavourably throughout the show's existence, neither Simu nor the other cast members displayed envy or negative attitudes towards the upcoming project.
+Again, this depicts the "model minority" stereotype often attributed to Asian people. </h1>
+<div class="box"><a href="/simu5/"> Back To Previous </a></div>
 </body>
 </html>
