--- a/static/styles/kevin.css
+++ b/static/styles/kevin.css
@@ -37,3 +37,13 @@ h1 {
   right: 30%;
   background-color: white;
 }
+
+.text {
+	margin: auto;
+	text-align: center;
+	position: relative;
+	 top: 50%;
+  -ms-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
