--- a/templates/home.html
+++ b/templates/home.html
@@ -4,39 +4,40 @@
 <link rel="stylesheet" type="text/css" href="../static/styles/home.css">
 </head>
 <body>
-<h1> Kim's Convenience POV Simulator </h1>
+<h1> PSY332 Kim's Convenience POV Simulator </h1>
+<h1 style="position: absolute; top: 20vh;"> Click on a name or photo to start. Scroll to the right if there are less than 5 names or people on your screen </h1>
 <a href="/ins_choi/">
 <p class="ins"> Ins Choi </p>
 <p class="ins_sub"> (Show Creator) </p>
-<img src="../static/images/ins-choi.png" style="position:absolute; left: 0px; bottom: 0px;">
+<img src="../static/images/ins-choi.png" style="position:absolute; left: 0vh; bottom: 0px;">
 </a>
 </body>
 <body>
 <a href="/simu/">
 <p class="simu"> Simu Liu </p>
 <p class="simu_sub"> (Portrays Jung) </p>
-<img src="../static/images/simu.png" style="position:absolute; left: 400px; bottom: 0px;">
+<img src="../static/images/simu.png" style="position:absolute; left: 40vh; bottom: 0px;">
 </a>
 </body>
 <body>
 <a href="/kevin/">
 <p class="kev"> Kevin White </p>
 <p class="kev_sub"> (Show Producer) </p>
-<img src="../static/images/kw.png" style="position:absolute; right: 0px; bottom: 0px;">
+<img src="../static/images/kw.png" style="position:absolute; left: 165vh; bottom: 0px;">
 </a>
 </body>
 <body>
 <a href="/paul/">
 <p class="paul"> Paul Sun-Hyung Lee </p>
 <p class="paul_sub"> (Portrays Appa) </p>
-<img src="../static/images/pshl.png" style="position:absolute; left: 1200px; bottom: 0px;">
+<img src="../static/images/pshl.png" style="position:absolute; left: 125vh; bottom: 0px;">
 </a>
 </body>
 <body>
 <a href="/jean/">
 <p class="jean"> Jean Yoon </p>
 <p class="jean_sub"> (Portrays Umma) </p>
-<img src="../static/images/jy.png" style="position:absolute; left: 800px; bottom: 0px;">
+<img src="../static/images/jy.png" style="position:absolute; left: 85vh; bottom: 0px;">
 </a>
 </body>
 </html>
