--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -18,8 +18,8 @@ body {
 
 img {
     float: left;
-    width:  370px;
-    height: 370px;
+    width:  20vw;
+    height: auto;
     object-fit: cover;
 }
 
@@ -32,70 +32,70 @@ h1 {
 
 .ins {
 	position: absolute;
-	top: 48.2%;
-	left: 7%;
+	top: 48.2vh;
+	left: 7vw;
 	background-color: black;
 }
 
 .simu {
 	position: absolute;
-	top: 48.2%;
-	left: 25%;
+	top: 48.2vh;
+	left: 25vw;
 	background-color: black;
 }
 
 .jean {
 	position: absolute;
-	top: 48.2%;
-	left: 48%;
+	top: 48.2vh;
+	left: 48vw;
 	background-color: black;
 }
 
 .paul {
 	position: absolute;
-	top: 48.2%;
-	left: 68%;
+	top: 48.2vh;
+	left: 68vw;
 	background-color: black;
 }
 
 .kev {
 	position: absolute;
-	top: 48.2%;
-	left: 88%;
+	top: 48.2vh;
+	left: 88vw;
 	background-color: black;
 }
 
 .ins_sub {
 	position: absolute;
-	top: 52%;
-	left: 7%;
+	top: 52vh;
+	left: 7vw;
 	background-color: black;
 }
 
 .simu_sub {
 	position: absolute;
-	top: 52%;
-	left: 24%;
+	top: 52vh;
+	left: 24vw;
 	background-color: black;
 }
 
 .jean_sub {
 	position: absolute;
-	top: 52%;
-	left: 47.5%;
+	top: 52vh;
+	left: 47.5vw;
 	background-color: black;
 }
 
 .paul_sub {
 	position: absolute;
-	top: 52%;
-	left: 68%;
+	top: 52vh;
+	left: 68vw;
 	background-color: black;
 }
 
 .kev_sub {
 	position: absolute;
-	top: 52%;
-	left: 88%;
+	top: 52vh;
+	left: 88vw;
 	background-color: black;
 }
