--- a/static/styles/jean.css
+++ b/static/styles/jean.css
@@ -7,8 +7,8 @@ body {
 
 h1 {
   position: absolute;
-  top: 25%;
-  width: 100%;
+  top: 25vh;
+  width: 100vw;
   text-align: center;
   font-size: 18px;
   color: white;
@@ -22,8 +22,8 @@ h1 {
   padding: 50px;
   margin: 20px;
   position: absolute;
-  top: 40%;
-  left: 30%;
+  top: 40vh;
+  left: 15vw;
   background-color: white;
 }
 
@@ -33,8 +33,8 @@ h1 {
   padding: 50px;
   margin: 20px;
   position: absolute;
-  top: 40%;
-  right: 30%;
+  top: 40vh;
+  right: 15vw;
   background-color: white;
 }
 
