--- a/static/styles/kevin.css
+++ b/static/styles/kevin.css
@@ -22,8 +22,8 @@ h1 {
   padding: 50px;
   margin: 20px;
   position: absolute;
-  top: 40%;
-  left: 30%;
+  top: 40vh;
+  left: 15vw;
   background-color: white;
 }
 
@@ -33,8 +33,8 @@ h1 {
   padding: 50px;
   margin: 20px;
   position: absolute;
-  top: 40%;
-  right: 30%;
+  top: 40vh;
+  right: 15vw;
   background-color: white;
 }
 
